@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-06-28T01:20:15Z",
-  "count_outdated" : 789,
-  "uniques_outdated" : 399,
+  "timestamp" : "2024-06-29T01:18:57Z",
+  "count_outdated" : 790,
+  "uniques_outdated" : 400,
   "count" : 796,
   "uniques" : 406,
   "clones" : [
-    {
-      "timestamp": "2024-06-15T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2024-06-17T00:00:00Z",
       "count": 1,
